game/app/assets/stylesheets/connect4.css
#connect4-heading {
    margin-top: 1px;
}

.board-container {
    display: flex;
    /* centers along vertical main axis; horizontally. */
    justify-content: center; 
}

/* this is the square board, the flex container */
#board {
    height: 540px;
    width: 630px;
    background-color: blue;
    border: 10px solid navy;
    margin: 0 auto 10% auto;
    display: flex; 
    /* wrap round tiles (children of flex container) inside square div */
    flex-wrap: wrap; 
}

.tile {
    height: 70px;
    width: 70px;
    margin: 5px;

    /* Circular tiles styling */
    background-color: white;
    border-radius: 50%;
    border: 5px solid navy;
}

.red-piece {
    background-color: red;
}

.yellow-piece {
    background-color: yellow;
}

#round-header {
    text-align: center;
    margin: 0; /* reset default margins */
}

#winner {
    text-align: center;
    margin-bottom: 2%;
    margin-top: 0;
}

.red-text {
    color: red;
    margin: 0;
}


.yellow-text {
    color: rgb(112, 112, 4);
    margin: 0;
}

.scoreboard-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}


#connect4-button-div {
    text-align: center;
    padding-bottom: 2%;
}

#connect4-button:hover {
    text-shadow: 2px 2px 4px lightblue;
}

.game-over {
    color: blue;
    /* x-offset, y-offset, blur, color (tip: use devtools to change it dynamically; much easier! */
    text-shadow: -1px 4px 9px #00000070;
}

